Your descriptive commit message here

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <section class="banner">
             <div>
-                <img src="assets/Group.png" alt="">
+                <img class="banner-image" src="assets/Group.png" alt="">
                 <h1 class="banner-title">"In the near future, I hope to <br> become a Developer."</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br> Ipsum has been
                     the
@@ -72,7 +72,7 @@
     </main>
 
     <!-- Inspiration section-->
-    <section class="inspiration">
+    <section class="inspiration ">
         <section class="web-dev">
             <h1 class="section-title">My Inspiration</h1>
             <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -89,7 +89,7 @@
     </section>
 
     <!-- current target -->
-    <section class="target">
+    <section class="target ">
         <section class="web-dev">
             <h1 class="section-title">My Current Target</h1>
             <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -121,7 +121,7 @@
     </section>
 
     <!-- next target -->
-    <section class="next-level">
+    <section class="next-level ">
         <section class="web-dev target">
             <h1 class="section-title">My Next Target </h1>
             <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -159,7 +159,7 @@
     </section>
 
     <!-- support section -->
-    <section class="support">
+    <section class="support ">
         <div class="support-container">
             <h2 class="support-title">I need Support</h2>
             <p class="support-discription">Lorem Ipsum is simply dummy text of the printing and <br> typesetting industry.</p>
@@ -180,6 +180,6 @@
             </div>
         </section>
     </footer>
-</body>
 
+</body>
 </html>
